<resources>
    <string name="app_name">PedraPapelTesouraFragments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resultado">Resultado:</string>
    <string name="op_jogador_3">Jogador 3</string>
    <string name="op_jogador_2">Jogador 2</string>
    <string name="op_o_para_jogar">Selecione uma opção para jogar:</string>
    <string name="tres_jogadores">Três Jogadores</string>
    <string name="dois_jogadores">Dois Jogadores</string>
    <string name="qtde_de_jogadores">Selecione a quantidade de jogadores</string>
    <string name="qtde_de_rodadas">Selecione a quantidade de rodadas</string>
    <string name="_1_rodada">1 Rodada</string>
    <string name="_3_rodadas">3 Rodadas</string>
    <string name="_5_rodadas">5 Rodadas</string>
    <string name="salvar">Salvar</string>
</resources>