<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/layoutOpcao"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tvSelecioneOpcao"
                android:text="@string/op_o_para_jogar"
                android:layout_marginBottom="25dp"
                android:textSize="14sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/btnPedra"
                    android:layout_weight="1"
                    android:src="@mipmap/pedra"
                    android:layout_gravity="center" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/btnPapel"
                    android:layout_weight="1"
                    android:src="@mipmap/papel"
                    android:layout_gravity="center|fill"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/btnTesoura"
                    android:layout_weight="1"
                    android:src="@mipmap/tesoura"
                    android:layout_gravity="center" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/layoutGeral"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layoutJogador2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/btnJogador2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tvJogador2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:text="@string/op_jogador_2"
                    android:textSize="14sp"
                    android:visibility="invisible"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutJogador3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/btnJogador3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/tvJogador3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/op_jogador_3"
                    android:textSize="14sp"
                    android:visibility="invisible"/>

            </LinearLayout>
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tvResultado"
            android:textAlignment="center"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</FrameLayout>